2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-xx  Pierre David <pdav@users.sourceforge.net>

	* ldapx.tcl:	Modified format for "change" entries
	* ldapx.test:	Adapted tests
	* ldapx.man:	Added a note about the format: for internal use only.

          ***POTENTIAL INCOMPATIBILITY***
	  Format of ldapx::entry "change" data was not sufficient
	  to represent all modifications made on entries. So, the
	  format has been modified to include several invidual
	  changes. This should not be a problem since "change"
	  format is intended to be used only by ldapx methods.

2007-08-06  Pierre David <pdav@users.sourceforge.net>

	* ldapx.tcl:	Saved dn was not restored during swap method.
	  ldapx.test:	Added test for backuped dn.

2007-08-03  Andreas Kupries  <andreask@activestate.com>

	* ldapx.man: Fix class command which was broken across lines.

2007-08-03  Pierre David <pdav@users.sourceforge.net>

	* ldapx.tcl:	Fixed reading of LDIF change entries.
			Fixed modification of an entry by replacing
			values instead of removing and adding the minimal
			set of changes, since LDAP schemas don't necessarily
			include equality operator for each attribute.
			Introduced a "-utf8" option in the LDIF class.
			Fixed indentation for LDIF continuation lines
			for Base64 encoded values.
			Fixed set1 when given an empty value: it deletes
			the attribute (as with set).
	* ldapx.test:	Fixed test for the new replacement mode.
	* ldapx.man:	Added documentation for "-utf8" option.


2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ldap.man: Fixed all warnings due to use of now deprecated
	* ldapx.man: commands. Added a section about how to give feedback.

2006-11-15  Michael Schlenker <mic42@users.sourceforge.net>
        
        * ldap.tcl:      Removed a leftover debug output..
        
2006-11-08  Michael Schlenker <mic42@users.sourceforge.net>
